# sp1-nft-verifier

./: .env.example  README.md
.github/workflows/: rust.yml
lib/: Cargo.toml
lib/src/: lib.rs
program/: Cargo.toml
program/src/: main.rs
script/: Cargo.toml
