[package]
version = "0.1.0"
name = "nft-verifier-script"
edition = "2021"
default-run = "main"

[[bin]]
name = "main"
path = "src/bin/main.rs"

[[bin]]
name = "evm"
path = "src/bin/evm.rs"

[[bin]]
name = "vkey"
path = "src/bin/vkey.rs"

[dependencies]
sp1-sdk = "4.2.0"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0.200", default-features = false, features = ["derive"] }
clap = { version = "4.0", features = ["derive", "env"] }
tracing = "0.1.40"
hex = "0.4.3"
alloy-sol-types = { version = "0.5" }
nft_verifier_lib = { path = "../lib" }
dotenv = "0.15.0"
bincode = "1.3"
ethers = { version = "2.0", features = ["abigen", "rustls"] }
tokio = { version = "1.36", features = ["full"] }
anyhow = "1"

[build-dependencies]
sp1-build = "4.2.0"
